fixed some of the responsive issues and spacing

--- a/src/quiztemplate/Counter.css
+++ b/src/quiztemplate/Counter.css
@@ -10,9 +10,9 @@
 
 @media (min-width:601px) {
   .counter-info {
-    position: fixed;
     width: 100%;
     bottom: 0;
+    position: fixed;
   }
 }
 
@@ -21,5 +21,6 @@
     position: fixed;
     width: 100%;
     bottom: 0;
+    margin-bottom: 149px;
   }
 }
