--- a/src/quiztemplate/Question.css
+++ b/src/quiztemplate/Question.css
@@ -18,7 +18,7 @@
   max-height: 200px;
   text-align: center;
   display: inline-block;
-  margin: 20px 0 20px 0;
+  margin: 10px 0 10px 0;
   border-radius: 5px;
 }
 
@@ -61,7 +61,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
   }
   .question .img {
     min-width: 40px;
@@ -78,6 +78,15 @@
 @media (max-width: 600px) {
   .question {
     border-radius: 0px;
-    padding: 20px 20px;
+    padding: 10px 20px;
+    margin-bottom: 38px;
+  }
+  .question img {
+    max-width: 50%;
+    max-height: 100px;
+    text-align: center;
+    display: inline-block;
+    margin: 5px 0 5px 0;
+    border-radius: 5px;
   }
 }
