--- a/src/quiztemplate/Results.css
+++ b/src/quiztemplate/Results.css
@@ -23,7 +23,6 @@
   padding: 20px 155px;
 }
 
-
 @media (min-width:801px) {
   .result-box {
     max-width: 60%;
@@ -43,45 +42,7 @@
     margin: auto;
     border-left: none;
     border-right: none;
-    border-radius: 5px;
-    max-width: 800px;
-    min-width: 320px;
-  }
-  .result-box .img {
-    min-width: 40px;
-  }
-}
-
-@media (max-width:600px) {
-  .result-box {
     border-radius: 0;
-  }
-  .result-box p {
-  padding: 20px 50px;
-  }
-}
-
-
-@media (min-width:801px) {
-  .result-box {
-    max-width: 60%;
-    min-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .result-box .img {
-    min-width: 40px;
-  }
-}
-
-@media (max-width:800px) {
-  .result-box {
-    margin: auto;
-    border-left: none;
-    border-right: none;
-    border-radius: 10px;
     max-width: 800px;
     min-width: 320px;
   }
