--- a/src/templates/quiz.css
+++ b/src/templates/quiz.css
@@ -16,6 +16,20 @@
   text-align: center;
   display: inline-block;
   position: relative;
-  margin: 25px 20px 10px 261px;
+  margin: 26px 0 16px 26px;
 }
+
+
+@media (max-width:600px) {
+  .App .Quiz-name {
+    text-align: left; 
+    margin: 15px 20px 15px 30px;
+  }
+  .App .qtitle {
+    border-top: 1px solid #6EC8B2;
+    width: 100%;
+  }
+}
+  
+
 
